dnl Process this file with autoconf to produce a configure script.
AC_INIT(patch.c)
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_CPP
AC_AIX
AC_ISC_POSIX
AC_CONST
AC_HEADER_DIRENT
if test -z "$dirheader"; then
  AC_DEFINE(NODIR)
fi
AC_RETSIGTYPE
AC_STDC_HEADERS
AC_CHECK_HEADERS(unistd.h)
AC_HAVE_HEADERS(string.h fcntl.h)
AC_REPLACE_FUNCS(rename)
AC_HAVE_FUNCS(pathconf strerror)
AC_LONG_FILE_NAMES
AC_OUTPUT(Makefile)
